--- a/phoenix/docker-compose.yml
+++ b/phoenix/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   phoenix:
     build: phx_project
+    environment:
+      - "NEW_RELIC_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY}"
     ports:
       - 4000:4000
     depends_on:
